# PyAutoRecorder

./: .gitignore  CLAUDE.md  README.md  build.py  main.py  pyproject.toml
.claude/: settings.local.json
app/: constants.py  element_highlight.py  field_confirm.py  image_capture_dialog.py  item_editor_dialog.py  main_window.py  manual_preview.py  options_dialog.py  recorder_child_window.py  recording_stop_button.py  timer_dialog.py  tray.py  workflow_editor_window.py  workflow_runner_window.py
docs/: CHANGELOG.md
scripts/: generate_manual.py  uia_inspect.py
service/: clipboard_fields.py  conditions.py  hotkey_manager.py  ime_control.py  key_notation.py  manual_generator.py  models.py  player.py  recorder.py  single_instance.py  timer_scheduler.py  ui_selector.py  workflow.py  workflow_player.py
setting/: PyAutoRecorderの特徴.txt
tests/app/: test_manual_preview.py
tests/service/: test_clipboard_fields.py  test_conditions.py  test_key_notation.py  test_manual_generator.py  test_models.py  test_player.py  test_recorder.py  test_single_instance.py  test_ui_selector.py  test_workflow.py
utils/: config.ini  config_manager.py
