[project]
name = "pyautorecorder"
version = "1.0.1"
requires-python = ">=3.13"

dependencies = [
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
    "pyperclip>=1.9.0",
    "pyside6>=6.8.0",
    "python-dotenv>=1.0.0",
    "pywin32>=308",
    "uiautomation>=2.0.29",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pyinstaller>=6.11.0",
    "pyright>=1.1.409",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["app", "service", "utils", "tests"]
exclude = ["scripts"]
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true
